# mlops-ctcm-pipeline

./: .gitignore  pyproject.toml  repo_map.txt
.dvc/: config
configs/: params.yaml
data/: .gitignore  concept_drifting.csv  current_data.csv  current_data.csv.dvc  data_drifting.csv  original_data.csv.dvc
mlruns/0/: meta.yaml
src/mlops_monitoring_pipeline/: generate_data.py  mock_data_generater.py  monitor_drift.py  promote_model.py  train_linear_model.py  train_linear_model_archived.py  train_model.py  train_pytorch_model.py
